# git-prism

./: .gitignore  CLAUDE.md  Makefile  README.md  coverage.xml  pyproject.toml  requirements.txt
config/: file_patterns.yaml
docs/: sample_report.html
docs/plans/: primer.md
src/git_prism/: __init__.py  cli.py  config.py  crawler.py
src/git_prism/analyzer/: __init__.py  classification.py  commits.py  contributors.py  filters.py  parallel.py  scoring.py
src/git_prism/report/: __init__.py  generator.py
src/git_prism/visualizations/: __init__.py  charts.py  networks.py  theme.py
templates/: base.html  repo_detail.html  report.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_analysis_flow.py  test_cli_e2e.py
tests/unit/: __init__.py  test_classification.py  test_contributors.py  test_crawler.py  test_networks.py  test_parallel.py  test_scoring.py
